# NexaCodeCli

./: ARCHITECTURE.md  Cargo.toml  FEATURES.md  README.md
crates/nexacode-core/: Cargo.toml
crates/nexacode-core/src/: config.rs  data_dir.rs  lib.rs  session_store.rs
crates/nexacode-core/src/core/: agent.rs  command.rs  context.rs  mod.rs  planning.rs  slash_commands.rs  task_engine.rs
crates/nexacode-core/src/infra/: fs.rs  git.rs  mod.rs  shell.rs
crates/nexacode-core/src/infra/llm/: anthropic.rs  config.rs  mod.rs  trait_def.rs  types.rs
crates/nexacode-core/src/mcp/: mod.rs  protocol.rs  resources.rs  sandbox.rs  tools.rs
crates/nexacode-core/src/skills/: executor.rs  manager.rs  mod.rs  registry.rs
crates/nexacode-core/src/skills/builtin/: mod.rs
crates/nexacode-core/src/state/: actions.rs  history.rs  mod.rs  reducers.rs
crates/nexacode-tui/: Cargo.toml
crates/nexacode-tui/src/: app.rs  lib.rs  main.rs
crates/nexacode-tui/src/tui/: event.rs  layout.rs  message.rs  mod.rs  theme.rs
crates/nexacode-tui/src/tui/components/: mod.rs
crates/nexacode-tui/src/tui/views/: chat.rs  mod.rs
