[package]
name = "nexacode-core"
version = "0.1.0"
edition = "2024"
description = "NexaCode core library - Agent, Skills, MCP, and Infrastructure"

[dependencies]
# Async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"

# HTTP Client for LLM APIs
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Config
figment = { version = "0.10", features = ["toml", "env"] }
dirs = "5.0"

# Filesystem
walkdir = "2.0"
notify = "6.0"

# Git
git2 = "0.19"

# Terminal
portable-pty = "0.8"

# Misc
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"
