[package]
name = "nexacode-tui"
version = "0.1.0"
edition = "2024"
description = "NexaCode TUI - Terminal User Interface"
default-run = "nexacode-tui"

[dependencies]
# Internal crates
nexacode-core = { path = "../nexacode-core" }

# TUI
ratatui = "0.27"
crossterm = { version = "0.28", features = ["event-stream", "events"] }

# Async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Misc
unicode-width = "0.1"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
pollster = "0.3"

[[bin]]
name = "nexacode-tui"
path = "src/main.rs"
